Sound: mix in software so Forge is one audio stream, not one per effect
Every other application shows up once in the system mixer. Forge showed up once per distinct sound
effect it had ever played, because AudioSystem.getLine hands back a DirectAudioDevice line and the
ALSA/PipeWire plugin renders each as its own application stream -- with SoundSystem.loadedClips
caching one AudioClip per SoundEffectType for the life of the process, that is one permanent stream
per effect at zero concurrency, before any pooling.

The JDK already ships the mixer this wants. SoftMixingMixer ("Gervill") mixes any number of lines
itself and opens the device once, but it is no longer registered as a MixerProvider, so it has to
be constructed directly and needs --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED.
Measured over 90s of game-paced effects, ~250 plays: 2 PipeWire nodes held flat, against 137 and a
freeze through the direct device. All 39 effects open on it and all 39 keep MASTER_GAIN, so the
volume control is unaffected.

Falls back to AudioSystem.getLine when the mixer cannot be reached, so a JVM without the flag
behaves exactly as before.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>